--- a/trunk/src/template/template.html
+++ b/trunk/src/template/template.html
@@ -2,6 +2,7 @@
 <html xmlns:py="http://genshi.edgewall.org/">
   <head>
     <title>$title</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" type="text/css" href="template.css" />
   </head>
   <body>
